# tapir-archicad-MCP

./: pyproject.toml
packaging/: tapir_archicad_mcp.spec  tapir_archicad_mcp_tray.spec
scripts/: build_windows_exe.ps1  export_sentence_model.py
src/tapir_archicad_mcp/: tray_app.py
src/tapir_archicad_mcp/companion/: __init__.py  config.py  control_window.py  controller.py  windows_tray.py
src/tapir_archicad_mcp/tools/: registration.py
src/tapir_archicad_mcp/tools/custom/: official_parity.py  tapir_backend_extensions.py  tapir_element_models.py  tapir_extensions.py  tapir_parity.py
tests/: test_companion_config.py  test_companion_controller.py  test_official_parity.py  test_tapir_backend_extensions.py  test_tapir_extensions.py  test_tapir_parity.py  test_windows_tray.py
