[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tapir-archicad-mcp"
version = "0.3.2"
description = "An MCP server that enables AI agents to automate Archicad using natural language via intelligent, semantic tool discovery."
readme = "README.md"
authors = [
    { name = "SzamosiMate", email = "szamimate@yahoo.com" }
]
requires-python = ">=3.12"
license = "MIT"

keywords = ["archicad", "bim", "automation", "api", "mcp", "ai", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "faiss-cpu>=1.12.0",
    "fastmcp>=2.10.5",
    "multiconn-archicad==0.5.1",
    "sentence-transformers>=5.1.0",
    "pywin32>=308; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/SzamosiMate/tapir-archicad-MCP"
"Bug Tracker" = "https://github.com/SzamosiMate/tapir-archicad-MCP/issues"

[project.scripts]
archicad-server = "tapir_archicad_mcp.server:main"
archicad-tray = "tapir_archicad_mcp.tray_app:main"
